This this the changelog file for the Pothos OpenCL toolkit.

Release 0.3.0 (pending)
==========================

- Renamed the project repo from pothos-opencl to PothosOpenCL
- Require Pothos version 0.6 for test plan JSON format change
- Alternative JSON C++ library to handle JSON parsing/emitting

Release 0.2.0 (2015-06-17)
==========================

- Added propagate labels to the OpenCL kernel block

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos OpenCL toolkit.