@@ -43,27 +43,27 @@ static const char *KERNEL_SOURCE =
 POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel)
 {
     auto registry = Pothos::ProxyEnvironment::make("managed")->findProxy("Pothos/BlockRegistry");
-    auto collector = registry.callProxy("/blocks/collector_sink", "float32");
+    auto collector = registry.call("/blocks/collector_sink", "float32");
 
-    auto feeder0 = registry.callProxy("/blocks/feeder_source", "float32");
-    auto feeder1 = registry.callProxy("/blocks/feeder_source", "float32");
+    auto feeder0 = registry.call("/blocks/feeder_source", "float32");
+    auto feeder1 = registry.call("/blocks/feeder_source", "float32");
 
-    auto openClKernel = registry.callProxy("/blocks/opencl_kernel", "0:0", std::vector<std::string>(2, "float"), std::vector<std::string>(1, "float"));
-    openClKernel.callVoid("setSource", "add_2x_float32", KERNEL_SOURCE);
-    openClKernel.callVoid("setLocalSize", 1);
-    openClKernel.callVoid("setGlobalFactor", 1.0);
-    openClKernel.callVoid("setProductionFactor", 1.0);
+    auto openClKernel = registry.call("/blocks/opencl_kernel", "0:0", std::vector<std::string>(2, "float"), std::vector<std::string>(1, "float"));
+    openClKernel.call("setSource", "add_2x_float32", KERNEL_SOURCE);
+    openClKernel.call("setLocalSize", 1);
+    openClKernel.call("setGlobalFactor", 1.0);
+    openClKernel.call("setProductionFactor", 1.0);
 
     //feed buffer
     auto b0 = Pothos::BufferChunk(10*sizeof(float));
     auto p0 = b0.as<float *>();
     for (size_t i = 0; i < 10; i++) p0[i] = i;
-    feeder0.callProxy("feedBuffer", b0);
+    feeder0.call("feedBuffer", b0);
 
     auto b1 = Pothos::BufferChunk(10*sizeof(float));
     auto p1 = b1.as<float *>();
     for (size_t i = 0; i < 10; i++) p1[i] = i+10;
-    feeder1.callProxy("feedBuffer", b1);
+    feeder1.call("feedBuffer", b1);
 
     //run the topology
     {
@@ -76,7 +76,7 @@ POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel)
     }
 
     //get the buffer
-    auto buff = collector.call<Pothos::BufferChunk>("getBuffer");
+    Pothos::BufferChunk buff = collector.call("getBuffer");
     std::cout << buff.length << std::endl;
 
     //check the buffer for equality
@@ -89,39 +89,39 @@ POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel)
 POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel_back_to_back)
 {
     auto registry = Pothos::ProxyEnvironment::make("managed")->findProxy("Pothos/BlockRegistry");
-    auto collector = registry.callProxy("/blocks/collector_sink", "float32");
+    auto collector = registry.call("/blocks/collector_sink", "float32");
 
-    auto feeder0 = registry.callProxy("/blocks/feeder_source", "float32");
-    auto feeder1 = registry.callProxy("/blocks/feeder_source", "float32");
-    auto feeder2 = registry.callProxy("/blocks/feeder_source", "float32");
+    auto feeder0 = registry.call("/blocks/feeder_source", "float32");
+    auto feeder1 = registry.call("/blocks/feeder_source", "float32");
+    auto feeder2 = registry.call("/blocks/feeder_source", "float32");
 
-    auto openClKernel0 = registry.callProxy("/blocks/opencl_kernel", "0:0", std::vector<std::string>(2, "float"), std::vector<std::string>(1, "float"));
-    openClKernel0.callVoid("setSource", "add_2x_float32", KERNEL_SOURCE);
-    openClKernel0.callVoid("setLocalSize", 1);
-    openClKernel0.callVoid("setGlobalFactor", 1.0);
-    openClKernel0.callVoid("setProductionFactor", 1.0);
+    auto openClKernel0 = registry.call("/blocks/opencl_kernel", "0:0", std::vector<std::string>(2, "float"), std::vector<std::string>(1, "float"));
+    openClKernel0.call("setSource", "add_2x_float32", KERNEL_SOURCE);
+    openClKernel0.call("setLocalSize", 1);
+    openClKernel0.call("setGlobalFactor", 1.0);
+    openClKernel0.call("setProductionFactor", 1.0);
 
-    auto openClKernel1 = registry.callProxy("/blocks/opencl_kernel", "0:0", std::vector<std::string>(2, "float"), std::vector<std::string>(1, "float"));
-    openClKernel1.callVoid("setSource", "add_2x_float32", KERNEL_SOURCE);
-    openClKernel1.callVoid("setLocalSize", 1);
-    openClKernel1.callVoid("setGlobalFactor", 1.0);
-    openClKernel1.callVoid("setProductionFactor", 1.0);
+    auto openClKernel1 = registry.call("/blocks/opencl_kernel", "0:0", std::vector<std::string>(2, "float"), std::vector<std::string>(1, "float"));
+    openClKernel1.call("setSource", "add_2x_float32", KERNEL_SOURCE);
+    openClKernel1.call("setLocalSize", 1);
+    openClKernel1.call("setGlobalFactor", 1.0);
+    openClKernel1.call("setProductionFactor", 1.0);
 
     //feed buffer
     auto b0 = Pothos::BufferChunk(10*sizeof(float));
     auto p0 = b0.as<float *>();
     for (size_t i = 0; i < 10; i++) p0[i] = i;
-    feeder0.callProxy("feedBuffer", b0);
+    feeder0.call("feedBuffer", b0);
 
     auto b1 = Pothos::BufferChunk(10*sizeof(float));
     auto p1 = b1.as<float *>();
     for (size_t i = 0; i < 10; i++) p1[i] = i+10;
-    feeder1.callProxy("feedBuffer", b1);
+    feeder1.call("feedBuffer", b1);
 
     auto b2 = Pothos::BufferChunk(10*sizeof(float));
     auto p2 = b2.as<float *>();
     for (size_t i = 0; i < 10; i++) p2[i] = i+20;
-    feeder2.callProxy("feedBuffer", b2);
+    feeder2.call("feedBuffer", b2);
 
     //run the topology
     {
@@ -137,7 +137,7 @@ POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel_back_to_back)
     }
 
     //get the buffer
-    auto buff = collector.call<Pothos::BufferChunk>("getBuffer");
+    Pothos::BufferChunk buff = collector.call("getBuffer");
     std::cout << buff.length << std::endl;
 
     //check the buffer for equality
@@ -150,21 +150,21 @@ POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel_back_to_back)
 POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel_middle_man)
 {
     auto registry = Pothos::ProxyEnvironment::make("managed")->findProxy("Pothos/BlockRegistry");
-    auto collector = registry.callProxy("/blocks/collector_sink", "int");
-    auto collectorMiddle = registry.callProxy("/blocks/collector_sink", "int");
-    auto feeder = registry.callProxy("/blocks/feeder_source", "int");
+    auto collector = registry.call("/blocks/collector_sink", "int");
+    auto collectorMiddle = registry.call("/blocks/collector_sink", "int");
+    auto feeder = registry.call("/blocks/feeder_source", "int");
 
-    auto openClKernel0 = registry.callProxy("/blocks/opencl_kernel", "0:0", std::vector<std::string>(1, "int"), std::vector<std::string>(1, "int"));
-    openClKernel0.callVoid("setSource", "copy_int", KERNEL_SOURCE);
-    openClKernel0.callVoid("setLocalSize", 1);
-    openClKernel0.callVoid("setGlobalFactor", 1.0);
-    openClKernel0.callVoid("setProductionFactor", 1.0);
+    auto openClKernel0 = registry.call("/blocks/opencl_kernel", "0:0", std::vector<std::string>(1, "int"), std::vector<std::string>(1, "int"));
+    openClKernel0.call("setSource", "copy_int", KERNEL_SOURCE);
+    openClKernel0.call("setLocalSize", 1);
+    openClKernel0.call("setGlobalFactor", 1.0);
+    openClKernel0.call("setProductionFactor", 1.0);
 
-    auto openClKernel1 = registry.callProxy("/blocks/opencl_kernel", "0:0", std::vector<std::string>(1, "int"), std::vector<std::string>(1, "int"));
-    openClKernel1.callVoid("setSource", "copy_int", KERNEL_SOURCE);
-    openClKernel1.callVoid("setLocalSize", 1);
-    openClKernel1.callVoid("setGlobalFactor", 1.0);
-    openClKernel1.callVoid("setProductionFactor", 1.0);
+    auto openClKernel1 = registry.call("/blocks/opencl_kernel", "0:0", std::vector<std::string>(1, "int"), std::vector<std::string>(1, "int"));
+    openClKernel1.call("setSource", "copy_int", KERNEL_SOURCE);
+    openClKernel1.call("setLocalSize", 1);
+    openClKernel1.call("setGlobalFactor", 1.0);
+    openClKernel1.call("setProductionFactor", 1.0);
 
     //create test plan
     json testPlan;
@@ -174,7 +174,7 @@ POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel_middle_man)
     testPlan["maxTrials"] = 200;
     testPlan["minSize"] = 1024;
     testPlan["maxSize"] = 1024;
-    auto expected = feeder.callProxy("feedTestPlan", testPlan.dump());
+    auto expected = feeder.call("feedTestPlan", testPlan.dump());
 
     //create tester topology
     std::cout << "Make topology" << std::endl;
@@ -189,7 +189,7 @@ POTHOS_TEST_BLOCK("/opencl/tests", test_opencl_kernel_middle_man)
     }
 
     std::cout << "collector verifyTestPlan" << std::endl;
-    collector.callVoid("verifyTestPlan", expected);
+    collector.call("verifyTestPlan", expected);
     std::cout << "collectorMiddle verifyTestPlan" << std::endl;
-    collectorMiddle.callVoid("verifyTestPlan", expected);
+    collectorMiddle.call("verifyTestPlan", expected);
 }
