@@ -3,6 +3,7 @@ This this the changelog file for the Pothos OpenCL toolkit.
 Release 0.3.0 (pending)
 ==========================
 
+- Replaced use of callVoid() and callProxy() with 0.6 call API
 - Renamed the project repo from pothos-opencl to PothosOpenCL
 - Require Pothos version 0.6 for test plan JSON format change
 - Alternative JSON C++ library to handle JSON parsing/emitting
